refactored biz logic, added category endpoints
