# api/openapi_server/models/__init__.py
@@ -1,6 +1,7 @@
 # flake8: noqa
 # import models into model package
 from openapi_server.models.category import Category
+from openapi_server.models.create_category_request import CreateCategoryRequest
 from openapi_server.models.create_task_request import CreateTaskRequest
 from openapi_server.models.get_tasks200_response import GetTasks200Response
 from openapi_server.models.task import Task
